tests/compile_error/uninitialized_var.xprshn
// Compile error: use of uninitialized variable
int a!
print a! // 'a' is uninitialized 